k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: library
  labels:
    app: digital-library
    environment: prod
